src/objects/Accounting_CreditAdjustment__c.object
<CustomObject>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <label>amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>credit_line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>credit_line</label>
        <referenceTo>Accounting_CreditLine__c</referenceTo>
        <relationshipLabel>Accounting_CreditAdjustment</relationshipLabel>
        <relationshipName>Accounting_CreditAdjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoice_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>invoice_id</label>
        <referenceTo>Accounting_Invoice__c</referenceTo>
        <relationshipLabel>Accounting_CreditAdjustment</relationshipLabel>
        <relationshipName>Accounting_CreditAdjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>line_item_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>line_item_id</label>
        <referenceTo>Accounting_LineItems__c</referenceTo>
        <relationshipLabel>Accounting_CreditAdjustment</relationshipLabel>
        <relationshipName>Accounting_CreditAdjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>note__c</fullName>
        <label>note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>payment_record_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>payment_record_id</label>
        <referenceTo>Accounting_Paymentrecord__c</referenceTo>
        <relationshipLabel>Accounting_CreditAdjustment</relationshipLabel>
        <relationshipName>Accounting_CreditAdjustment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <label>reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>related_credit_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>related_credit_id</label>
        <referenceTo>Accounting_CreditLine__c</referenceTo>
        <relationshipLabel>Accounting_CreditAdjustment (related_credit_id)</relationshipLabel>
        <relationshipName>Accounting_CreditAdjustment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>web_user__c</fullName>
        <label>web_user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_CreditAdjustment</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Accounting_CreditAdjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_CreditAdjustment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>